--- a/res/layout/activity_camero_demo.xml
+++ b/res/layout/activity_camero_demo.xml
@@ -1,20 +1,37 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation = "vertical"
-    android:layout_width = "match_parent"
-    android:layout_height = "match_parent" >
-    
-    <TextView
-        android:id="@+id/status"
-        android:layout_width="fill_parent"
-        android:layout_height="114dp"
-        android:text="@string/status" />
-    
-    <ImageButton
-        android:id="@+id/image"
-        android:layout_width="fill_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/ic_launcher" />
+    android:id="@+id/TableLayout1"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
-</LinearLayout>
-    
+    <TableRow
+        android:id="@+id/tableRow1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/status"
+            android:layout_width="fill_parent"
+            android:layout_height="114dp"
+            android:text="@string/status" />
+    </TableRow>
+
+    <TableRow
+        android:id="@+id/tableRow2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1" >
+
+        <ImageButton
+            android:id="@+id/image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:contentDescription="@string/hello_world"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_launcher"
+            android:visibility="visible" />
+
+    </TableRow>
+
+</TableLayout>
